--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <h2>Список наших парикмахеров</h2>
-<%  @barebers.each do |barber| %>
+<%  @barbers.each do |barber| %>
 	<p>
 	<%= barber.name %> 
 	</p>
